sumo/tests/sumo/output/e3/errors/lane_empty__exit/errors.sumo
Error: Attribute 'lane' in definition of det_exit '4/1to3/1' is empty.
Quitting (on error).
